End of section 3

--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "AppSettings":
+  {
+    "Token": "super secret key"
+  },
   "ConnectionStrings":{
     "DefaultConnection":"Server=HUSO-PC\\Huso;Database=DatingApp;Trusted_Connection=True"
   },
